SERVER-88225 Always check for RecordId match when unindexing old format keys (#20218)

GitOrigin-RevId: 3703741818c2fac556e66413ad891a99821f9f26